package com.github.FishMiner.data.services;

public interface IHighscoreService {
    void submitScore(String username, int score);
}
