package com.github.FishMiner.domain.handlers;

public interface IHighscoreUpdater {
    void submitScore(String username, int score);
}
