package com.github.FishMiner.domain.ports.out;

public interface ILeaderboardFetcher {
    // todo: make this
}
